; ModuleID = '/home/carl/AnghaBench/tig/src/extr_keys.c_keybinding_equals.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_keys.c_keybinding_equals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.keybinding = type { i64 }
%struct.key = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.keybinding*, %struct.key*, i64, i32*)* @keybinding_equals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @keybinding_equals(%struct.keybinding* %0, %struct.key* %1, i64 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.keybinding*, align 8
  %7 = alloca %struct.key*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  store %struct.keybinding* %0, %struct.keybinding** %6, align 8
  store %struct.key* %1, %struct.key** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  %10 = load %struct.keybinding*, %struct.keybinding** %6, align 8
  %11 = getelementptr inbounds %struct.keybinding, %struct.keybinding* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %8, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %22

16:                                               ; preds = %4
  %17 = load %struct.keybinding*, %struct.keybinding** %6, align 8
  %18 = load %struct.key*, %struct.key** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @keybinding_matches(%struct.keybinding* %17, %struct.key* %18, i64 %19, i32* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %16, %15
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @keybinding_matches(%struct.keybinding*, %struct.key*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
